# sbu

./: .gitignore  BuildInstructions.txt  GitAddChanged.bat  Goals.txt  LICENSE  ProjectManagement.txt  README.md  ReleaseNotes.txt  Requirements.txt  SBU.txt  build.sh  build_all.sh  build_sbu.sh  sbu_swagger.yaml
Configuration/: SBUApp.config  SBUWebAppConfig.json
SBUWebApp/: SBUCli.py  SBUGlobals.py  SBUOperations.py  SBUUtils.py  SBUWebApp.py  SBUWebApp.pyproj  SBUWebServer.py  SQLHelper.py  Sbu.py  SbuDataClasses.py  sbu.openapi
compile_sbu/: Dockerfile  SQLite3.CMakeLists.txt  build.sh
docker_sbu/: DefaultSBUApp.config  DefaultSBUWebAppConfig.json  Dockerfile  dockerEntryPoint.sh
linuxBuild/: compile.sh
sbu/: CMakeInclude.cmake  CMakeInclude.cmake_include  CMakeLists.txt  DefaultSBUWebAppConfig.json  Dockerfile  LinuxBuild.sh  ResourceBuild.cmd  ResourceBuild.sh  WindowsBuild.cmd  sbu.config  variables.sh
sbu/SbuCli/: CMakeLists.txt
sbu/SbuCli/headers/: CommandLineAndConfig.h  Commands.h  HttpUrlRouter.h  MultiFile.h  ZipWrapper.h  factories.h  httpServer.h  httpServerRequestFactory.h  httpServerUtils.h  sbu.h  sbu_exceptions.h  utils.h
sbu/SbuCli/httpModels/: Backup.cpp  Backup.h  BackupDef.cpp  BackupDef.h  BackupDefs.cpp  BackupDefs.h  BackupInfo.cpp  BackupInfo.h  CloseInformation.cpp  CloseInformation.h  Configuration.cpp  Configuration.h  ConfigurationBody.cpp  ConfigurationBody.h  CreateBackupDef.cpp  CreateBackupDef.h  ErrorInformation.cpp  ErrorInformation.h  File.cpp  File.h  FullBackupDefInfo.cpp  FullBackupDefInfo.h  HelpInformation.cpp  HelpInformation.h  ModelBase.cpp  ModelBase.h  ProgramInformation.cpp  ProgramInformation.h  RestoreOptions.cpp  RestoreOptions.h
sbu/SbuCli/include/: BackupDB.h  ExitCodes.h  FileRepositoryDB.h  FileRepositoryDBImpl.h  FileRepositoryStorageHandler.h  Loggers.h  Operations.h  RepositoryDB.h  SbuDatabase.h  SbuDatabasePoco.h  SbuDatabaseSQLite.h  StandardOutputWrapper.h
sbu/SbuCli/include/Operations/: BackupOperation.h  RestoreOperation.h
sbu/SbuCli/include/StorageHandlers/: AwsS3StorageHandler.h
sbu/SbuCli/resources/: AddMissing.sql  AddUpdated.sql  BackupDB.sql  CopyBackupState.sql  CopyUpdatedToCurrent.sql  CurrentState.sql  DeleteUpdatedInCurrent.sql  InsertDirectory.sql  InsertFile.sql  MarkDeleted.sql  MarkUnchanged.sql  MarkUpdated.sql  Repository.sql  RestoreQuery.sql  findBackupInfo.sql  findDiffQuery.sql  findHashCalcQuery.sql  findUploadQuery.sql
sbu/SbuCli/resources/databases/: BackupDB.sql  FileRepository.sql  Repository.sql
sbu/SbuCli/sources/: AwsS3StorageHandler.cpp  BackupDB.cpp  CommandLineOptions.cpp  FileRepositoryDB.cpp  FileRepositoryStorageHandler.cpp  HttpUrlRouter.cpp  Loggers.cpp  MultiFile.cpp  Operations.cpp  RepositoryDB.cpp  SbuDatabasePoco.cpp  SbuDatabaseSQLite.cpp  StandardOutputWrapper.cpp  ZipWrapper.cpp  factories.cpp  httpServerRequestFactory.cpp  httpServerUtils.cpp  sbu.cpp  utils.cpp
sbu/SbuCli/sources/Databases/: BackupDB.cpp  FileRepositoryDB.cpp  RepositoryDB.cpp  SecureFileRepositoryDB.cpp
sbu/SbuCli/sources/Operations/: Backup.cpp  BackupCalcDiff.cpp  BackupFileUpload.cpp  BackupInfo.cpp  BackupScan.cpp  CreateBackupDef.cpp  HTTPServer.cpp  ListBackup.cpp  ListBackupDef.cpp  Restore.cpp
sbu/SbuCli/sources/StorageHandlers/: AwsS3StorageHandler.cpp  FileRepositoryStorageHandler.cpp
sbu/cmake/linux/: PocoConfig.cmake  SQLite3Config.cmake  SQLiteCppConfig.cmake  aws-cpp-sdk-coreConfig.cmake  aws-cpp-sdk-s3Config.cmake  aws-cpp-sdk-transferConfig.cmake  sbu.cmake  sqlite3Config.cmake
sbu/cmake/windows/: sbu.cmake
sbuApp/: Dockerfile
sbuTests/: sbuTests.py  sbuTests.pyproj  sbuTests.sln
sbu_app/: WindowsBuild.cmd  variables.sh
sbu_app/SbuCli/: CMakeLists.txt
sbu_app/SbuCli/headers/: ZipWrapper.h  sbu.h
sbu_app/SbuCli/include/: FileRepositoryDB.h  FileRepositoryDBImpl.h  SbuDatabase.h  SbuDatabaseSQLite.h  StandardOutputWrapper.h
sbu_app/SbuCli/include/Operations/: BackupOperation.h  RestoreOperation.h
sbu_app/SbuCli/include/StorageHandlers/: AwsS3StorageHandler.h  FileRepositoryStorageHandler.h
sbu_app/SbuCli/resources/: AddUpdated.sql  CopyBackupState.sql  InsertDirectory.sql  InsertFile.sql  MarkDeleted.sql  findUploadQuery.sql
sbu_app/SbuCli/resources/databases/: BackupDB.sql
sbu_app/SbuCli/sources/: CommandLineOptions.cpp  MultiFile.cpp  SbuDatabaseSQLite.cpp  ZipWrapper.cpp  factories.cpp  sbu.cpp  utils.cpp
sbu_app/SbuCli/sources/Databases/: BackupDB.cpp  RepositoryDB.cpp
sbu_app/SbuCli/sources/Operations/: Backup.cpp  BackupInfo.cpp  ListBackup.cpp  Restore.cpp
sbu_app/SbuCli/sources/StorageHandlers/: AwsS3StorageHandler.cpp
sbu_app/cmake/linux/: aws-cpp-sdk-coreConfig.cmake  sbu.cmake
sbu_app/cmake/windows/: sbu.cmake
webservice_sbu/: Dockerfile
webservice_venv/: Dockerfile  build.sh
